kubernetes/apps/rook-ceph/rook-ceph/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   hajimari.io/enabled: "false"
  name: rook-ceph-objectstore
  namespace: rook-ceph
spec:
  ingressClassName: nginx
  rules:
    - host: &host objects.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: rook-ceph-rgw-ceph-objectstore
                port:
                  name: http
            path: /
            pathType: Prefix
